--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-p, body, article {
+p, body {
     margin: unset;
 }
 
@@ -12,6 +12,7 @@ body {
     min-height: 100vh;
     @media (min-width: 1024px) {
         flex-direction: row;
+        column-gap: 40px;
     }
 }
 
@@ -33,10 +34,33 @@ body {
     }
 }
 
+.header__utils-icon {
+    display: block;
+    position: static;
+}
+
 .header__logo {
     display: flex;
     flex-direction: row;
 }
+
+.header__button-utils, .content__button-arrow, .content__button-subscribe {
+    display: block;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.header__button-img-menu {
+    display: block;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
 
 .header__menu {
     display: none;
@@ -58,6 +82,8 @@ body {
     @media (min-width: 1024px) {
         margin-left: 47px;
         position: relative;
+        max-width: 830px;
+        width: 100%;
     }
 }
 
@@ -66,10 +92,20 @@ body {
     @media (min-width: 1024px) {
         display: block;
         height: 44px;
-        width: 830px;
         border-radius: 22px;
-        opacity: 30%;
-        background-color: #EBEBEB;
+        padding-left: 20px;
+        font-size: 18px;
+        color: #000000;
+        width: 100%;
+        background: rgba(235, 235, 235, 0.7);
+        border: unset;
+        :focus-visible {
+            border: unset;
+        }
+
+        :focus {
+            border: unset;
+        }
     }
 }
 
@@ -97,7 +133,6 @@ body {
 .header__utils {
     display: none;
     @media (min-width: 1024px) {
-        position: relative;
         display: flex;
         margin-left: auto;
         column-gap: 50px;
@@ -105,7 +140,13 @@ body {
     }
 }
 
-.header__utils-notification {
+.notification {
+    position: relative;
+}
+
+.notification::after {
+    display: block;
+    content: '3';
     position: absolute;
     background-color: #FF0000;
     width: 18px;
@@ -114,11 +155,11 @@ body {
     top: -7px;
     right: -7px;
     color: #FFFFFF;
-    font-family: Mulish;
     font-size: 12px;
     font-weight: 700;
-    line-height: 15px;
+    line-height: 18px;
     text-align: center;
+
 }
 
 .header__avatar {
@@ -134,6 +175,96 @@ body {
     }
 }
 
+.sidebar {
+    display: none;
+    @media (min-width: 1024px) {
+        display: block;
+        padding: 0 30px;
+        position: fixed;
+        top: 80px;
+        left: 0;
+        overflow-y: hidden;
+        scrollbar-width: thin;
+        height: 90vh;
+        padding-bottom: 80px;
+    }
+}
+
+.sidebar:hover {
+    display: none;
+    @media (min-width: 1024px) {
+        display: block;
+        padding: 0 30px;
+        position: fixed;
+        top: 80px;
+        left: 0;
+        overflow-y: auto;
+        height: 90vh;
+        padding-bottom: 80px;
+    }
+}
+
+.sidebar-container__subscription-title {
+    font-family: Mulish;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23px;
+    text-align: left;
+    color: #000000;
+    margin-bottom: 30px;
+}
+
+.sidebar-container, .sidebar-container-subscription {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 60px;
+
+}
+
+.sidebar-container__item {
+    margin-bottom: 29px;
+}
+
+.sidebar-container__subscription_item {
+    margin-bottom: 23px;
+}
+
+.sidebar-container__item a, .sidebar-container__subscription_item a, .sidebar-container__setting a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.sidebar-container__item-img-name, .sidebar-container__subscribe-item-img-name, .sidebar-container__setting-item-img-name {
+    display: inline-block;
+    margin-left: 14px;
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    color: #898989;
+}
+
+.sidebar-container__item-img-name_home {
+    color: #FF0000;
+}
+
+.sidebar-container__subscription {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar-container__subscribe-item-img {
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+}
+
+.setting {
+    bottom: 0px;
+}
+
 .content_title {
     display: none;
 
@@ -142,11 +273,11 @@ body {
 .content {
     padding: 74px 16px;
     @media (min-width: 1024px) {
-        margin-left: 250px ;
         display: flex;
         flex-direction: column;
         overflow: hidden;
         order: 1;
+        margin-left: 255px;
     }
 }
 
@@ -156,13 +287,24 @@ body {
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: space-between;
+        margin-top: 50px;
         margin-bottom: 30px;
+        gap: 20px
     }
+}
+
+.content__tittle {
+    display: flex;
+    align-items: center;
+}
+
+.content__tittle-button-subscribe {
+    margin-right: 30px;
 }
 
 .content__tittle-image {
     @media (min-width: 1024px) {
-        margin-top: 50px;
         width: 50px;
         height: 50px;
         border-radius: 50%;
@@ -172,7 +314,7 @@ body {
 
 .content__tittle-text {
     @media (min-width: 1024px) {
-        margin-top: 49px;
+        display: inline-block;
         font-family: Mulish;
         font-size: 26px;
         font-weight: 700;
@@ -181,21 +323,15 @@ body {
     }
 }
 
-.content__tittle-button-subscribe {
-    position: absolute;
-    margin-top: 50px;
-    right: 255px;
+.content__button-items {
+    display: flex;
+    align-items: center;
+    margin-right: 149px;
 }
 
-.content__tittle-button-next {
-    position: absolute;
-    margin-top: 50px;
-    right: 149px;
-}
 
 .content__title-info {
     @media (min-width: 1024px) {
-        padding-top: 57px;
         padding-left: 19px;
         font-family: Mulish;
         font-size: 16px;
@@ -214,18 +350,25 @@ body {
     @media (min-width: 1024px) {
         white-space: nowrap;
         flex-direction: row;
-        overflow-x: auto;
-        overflow-y: clip;
+        overflow-x: hidden;
+        overflow-y: hidden;
     }
 }
 
-.content__video-list::-webkit-scrollbar {
-    display: none;
+.content__video-list:hover, .content__video-list-rec:hover {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
+    @media (min-width: 1024px) {
+        white-space: nowrap;
+        flex-direction: row;
+        overflow-x: auto;
+        overflow-y: clip;
+        scrollbar-width:thin;
+    }
 }
 
-.content__video-list-rec::-webkit-scrollbar {
-    display: none;
-}
 
 .content__video-item {
     width: 100%;
@@ -346,7 +489,7 @@ body {
     float: right;
 }
 
-.footer {
+footer {
     width: 100%;
     position: fixed;
     padding: 12px 24px;
@@ -354,50 +497,24 @@ body {
     background: #fff;
     border-top: 1px solid #F1F1F1;
     @media (min-width: 1024px) {
-        padding-top: 50px;
-        display: flex;
-        padding-left: 32px;
-        flex-direction: column;
-        align-items: flex-start;
-        width: fit-content;
-        order: 2; /* Помещаем футер сбоку */
-        height: 100vh;
-        overflow-y: auto;
+        display: none;
     }
 }
 
-.footer::-webkit-scrollbar {
+footer::-webkit-scrollbar {
     display: none;
 }
 
-.footer__visible {
+.footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    @media (min-width: 1024px) {
-        flex-direction: column;
-        margin-top: 59px;
-        display: flex;
-        align-items: flex-start;
-    }
 }
 
 .footer__item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    @media (min-width: 1024px) {
-        display: flex;
-        flex-direction: row;
-        margin-bottom: 28px;
-    }
-}
-
-.footer__item_library {
-    @media (min-width: 1024px) {
-        margin-top: 32px;
-        margin-bottom: 0px;
-    }
 }
 
 .footer__item-img-home {
@@ -432,100 +549,17 @@ body {
     line-height: 13px;
     text-align: left;
     color: #898989;
-    @media (min-width: 1024px) {
-        margin-left: 13px;
-        font-size: 16px;
-        line-height: 20px;
-    }
 }
 
-.footer__item-img-name_home {
-    color: #FF0000;
-}
 
-.footer__invisible-sidebar {
-    display: none;
-    @media (min-width: 1024px) {
-        display: flex;
-        flex-direction: column;
-    }
-}
 
-.footer__sidebar-item-img-name {
-    font-family: Mulish;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 13px;
-    text-align: left;
-    color: #898989;
-    @media (min-width: 1024px) {
-        margin-left: 13px;
-        font-size: 16px;
-        line-height: 20px;
-    }
-}
 
-.footer__sidebar-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    @media (min-width: 1024px) {
-        display: flex;
-        flex-direction: row;
-        margin-top: 29px;
-    }
-}
 
-.footer__subscription-title {
-    font-family: Mulish;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 23px;
-    text-align: left;
-    margin-top: 58px;
-    margin-bottom: 7px;
-}
 
-.footer__subscription_item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 23px;
-}
 
-.footer__subscribe-item-img {
-    width: 26px;
-    height: 26px;
-    border-radius: 50%
-}
 
-.footer__subscribe-item-img-name {
-    font-family: Mulish;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: left;
-    margin-left: 10px;
-    color: #898989;
-}
 
-.footer__setting {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 104px;
-    margin-bottom: 40px;
-}
 
-.footer__setting-img-name {
-    font-family: Mulish;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: left;
-    margin-left: 12px;
-    color: #898989;
-}
 
 
 
